crates/ruff_python_semantic/src/cfg/snapshots/ruff_python_semantic__cfg__tests__for.py.md.snap
---
source: crates/ruff_python_semantic/src/cfg/mod.rs
description: "This is a Mermaid graph. You can use https://mermaid.live to visualize it as a diagram."
---
## Function 0
### Source
```python
def func():
    for i in range(5):
        print(i)
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["EMPTY"]
	node3["print(i)"]
	node0-->node2
	node2-->|"for i in range(5)"|node3
	node2==>|"Else"|node1
	node3-->node2
```

## Function 1
### Source
```python
def func():
    for i in range(20):
        print(i)
    else:
        return 0
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["EMPTY"]
	node3["print(i)"]
	node4["return 0"]
	node0-->node2
	node2-->|"for i in range(20)"|node3
	node2-->|"Else"|node4
	node3-->node2
	node4==>node1
```

## Function 2
### Source
```python
def func():
    for i in range(10):
        if i == 5:
            return 1
    return 0
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["return 0"]
	node3["EMPTY"]
	node4["EMPTY"]
	node5["return 1"]
	node0-->node3
	node2==>node1
	node3-->|"for i in range(10)"|node4
	node3-->|"Else"|node2
	node4-->|"i == 5"|node5
	node4-->|"Else"|node3
	node5==>node1
```

## Function 3
### Source
```python
def func():
    for i in range(111):
        if i == 5:
            return 1
    else:
        return 0
    return 2
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["return 2"]
	node3["EMPTY"]
	node4["EMPTY"]
	node5["return 0"]
	node6["return 1"]
	node0-->node3
	node2==>node1
	node3-->|"for i in range(111)"|node4
	node3-->|"Else"|node5
	node4-->|"i == 5"|node6
	node4-->|"Else"|node3
	node5==>node1
	node6==>node1
```

## Function 4
### Source
```python
def func():
    for i in range(12):
        continue
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["EMPTY"]
	node3["continue"]
	node0-->node2
	node2-->|"for i in range(12)"|node3
	node2==>|"Else"|node1
	node3-->node2
```

## Function 5
### Source
```python
def func():
    for i in range(1110):
        if True:
            continue
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["EMPTY"]
	node3["EMPTY"]
	node4["continue"]
	node0-->node2
	node2-->|"for i in range(1110)"|node3
	node2==>|"Else"|node1
	node3-->|"True"|node4
	node3-->|"Else"|node2
	node4-->node2
```

## Function 6
### Source
```python
def func():
    for i in range(13):
        break
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["EMPTY"]
	node3["break"]
	node0-->node2
	node2-->|"for i in range(13)"|node3
	node2==>|"Else"|node1
	node3==>node1
```

## Function 7
### Source
```python
def func():
    for i in range(1110):
        if True:
            break
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["EMPTY"]
	node3["EMPTY"]
	node4["break"]
	node0-->node2
	node2-->|"for i in range(1110)"|node3
	node2==>|"Else"|node1
	node3-->|"True"|node4
	node3-->|"Else"|node2
	node4==>node1
```

## Function 8
### Source
```python
def func():
    for i in range(5):
        pass
    else:
        return 1
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["EMPTY"]
	node3["pass"]
	node4["return 1"]
	node0-->node2
	node2-->|"for i in range(5)"|node3
	node2-->|"Else"|node4
	node3-->node2
	node4==>node1
```

## Function 9
### Source
```python
def func():
    for i in range(5):
        pass
    else:
        return 1
    x = 1
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["x = 1"]
	node3["EMPTY"]
	node4["pass"]
	node5["return 1"]
	node0-->node3
	node2==>node1
	node3-->|"for i in range(5)"|node4
	node3-->|"Else"|node5
	node4-->node3
	node5==>node1
```

## Function 10
### Source
```python
def func():
    for i in range(5):
        pass
    else:
        pass
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["EMPTY"]
	node3["pass"]
	node4["pass"]
	node0-->node2
	node2-->|"for i in range(5)"|node3
	node2-->|"Else"|node4
	node3-->node2
	node4==>node1
```

## Function 11
### Source
```python
def func():
    for i in range(13):
        for i in range(12):
            x = 2
            if True:
                break

        x = 3
        if True:
            break

    print('hello')
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["print('hello')"]
	node3["EMPTY"]
	node4["EMPTY"]
	node5["x = 3"]
	node6["EMPTY"]
	node7["x = 2"]
	node8["break"]
	node9["break"]
	node0-->node3
	node2==>node1
	node3-->|"for i in range(13)"|node4
	node3-->|"Else"|node2
	node4-->node6
	node5-->|"True"|node9
	node5-->|"Else"|node3
	node6-->|"for i in range(12)"|node7
	node6-->|"Else"|node5
	node7-->|"True"|node8
	node7-->|"Else"|node6
	node8-->node5
	node9-->node2
```

## Function 12
### Source
```python
def func():
    for i in range(13):
        for i in range(12):
            x = 2
            if True:
                continue

        x = 3
        if True:
            break

    print('hello')
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["print('hello')"]
	node3["EMPTY"]
	node4["EMPTY"]
	node5["x = 3"]
	node6["EMPTY"]
	node7["x = 2"]
	node8["continue"]
	node9["break"]
	node0-->node3
	node2==>node1
	node3-->|"for i in range(13)"|node4
	node3-->|"Else"|node2
	node4-->node6
	node5-->|"True"|node9
	node5-->|"Else"|node3
	node6-->|"for i in range(12)"|node7
	node6-->|"Else"|node5
	node7-->|"True"|node8
	node7-->|"Else"|node6
	node8-->node6
	node9-->node2
```

## Function 13
### Source
```python
def func():
    for i in range(13):
        for i in range(12):
            x = 2
            if True:
                break

        x = 3
        if True:
            continue

    print('hello')
```

### Control Flow Graph
```mermaid
flowchart TD
	node0["EMPTY"]
	node1((("EXIT")))
	node2["print('hello')"]
	node3["EMPTY"]
	node4["EMPTY"]
	node5["x = 3"]
	node6["EMPTY"]
	node7["x = 2"]
	node8["break"]
	node9["continue"]
	node0-->node3
	node2==>node1
	node3-->|"for i in range(13)"|node4
	node3-->|"Else"|node2
	node4-->node6
	node5-->|"True"|node9
	node5-->|"Else"|node3
	node6-->|"for i in range(12)"|node7
	node6-->|"Else"|node5
	node7-->|"True"|node8
	node7-->|"Else"|node6
	node8-->node5
	node9-->node3
```
